// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List components rendering variants should match to snapshot - empty list: List empty snapshot 1`] = `
<ul
  className="MuiList-root MuiList-padding"
/>
`;

exports[`List components rendering variants should match to snapshot - with ListItem button: List with ListItem button snapshot 1`] = `
<ul
  className="MuiList-root MuiList-padding"
>
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    Test
  </div>
</ul>
`;

exports[`List components rendering variants should match to snapshot - with ListItem: List with ListItem snapshot 1`] = `
<ul
  className="MuiList-root MuiList-padding"
>
  <li
    className="MuiListItem-root MuiListItem-gutters"
    disabled={false}
  >
    Test
  </li>
</ul>
`;

exports[`List components rendering variants should match to snapshot - with ListItemAvatar: List with ListItemAvatar snapshot 1`] = `
<ul
  className="MuiList-root MuiList-padding"
>
  <li
    className="MuiListItem-root MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="MuiListItemAvatar-root"
    >
      <div
        className="MuiAvatar-root NatDsAvatar-root-1 MuiAvatar-circle MuiAvatar-colorDefault"
      >
        <i
          aria-hidden={true}
          className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-close NatDSIcon-root-3 NatDSIcon-root-4"
        >
          outlined-navigation-close
        </i>
      </div>
    </div>
  </li>
</ul>
`;

exports[`List components rendering variants should match to snapshot - with ListItemIcon: List with ListItemIcon snapshot 1`] = `
<ul
  className="MuiList-root MuiList-padding"
>
  <li
    className="MuiListItem-root MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="MuiListItemIcon-root"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-close NatDSIcon-root-3 NatDSIcon-root-5"
      >
        outlined-navigation-close
      </i>
    </div>
  </li>
</ul>
`;

exports[`List components rendering variants should match to snapshot - with ListItemSecondaryAction: List with ListItemSecondaryAction snapshot 1`] = `
<ul
  className="MuiList-root MuiList-padding"
>
  <li
    className="MuiListItem-root MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="MuiListItemSecondaryAction-root"
    >
      <button
        aria-label="shopping"
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <i
            aria-hidden={true}
            className="material-icons MuiIcon-root natds-icons natds-icons-outlined-navigation-close NatDSIcon-root-3 NatDSIcon-root-6"
          >
            outlined-navigation-close
          </i>
        </span>
      </button>
    </div>
  </li>
</ul>
`;

exports[`List components rendering variants should match to snapshot - with ListItemText: List with ListItemText snapshot 1`] = `
<ul
  className="MuiList-root MuiList-padding"
>
  <li
    className="MuiListItem-root MuiListItem-gutters"
    disabled={false}
  >
    <div
      className="MuiListItemText-root"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Text only
      </span>
    </div>
  </li>
</ul>
`;

exports[`List components rendering variants should match to snapshot - with ListSubheader: List with ListSubheader snapshot 1`] = `
<ul
  className="MuiList-root MuiList-padding MuiList-subheader"
>
  <li
    className="MuiListSubheader-root MuiListSubheader-sticky MuiListSubheader-gutters"
    id="subheader"
  >
    Subheader
  </li>
</ul>
`;
